Fix issue that 'tab-selection' is not visible
- make glasspanes 'z-index 100';
- do not level direct children of forms to same z-index, because only done for direct children of desktop;

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/Desktop.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/Desktop.css
@@ -403,6 +403,7 @@
   .animation(fadeIn ease-in 1);
   .animation-duration(0.25s);
   outline: none;
+  z-index: 100;
 
   &.busy {
     /* Make glasspane transparent and disable animation */
