--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.css
@@ -227,6 +227,8 @@ button::-moz-focus-inner {
 .scout > .desktop-bench,
 .scout > .splitter,
 .scout > .glasspane,
+.scout > .dialog,
+.scout > .form,
 .scout > .tooltip,
 .scout > .smart-field-popup,
 .scout > .date-picker-popup {
@@ -236,15 +238,4 @@ button::-moz-focus-inner {
 /* element will therefore always be drawn at the top. */
 .scout > .offline-message {
   z-index: 1;
-}
-
-/* Modality on Outline */
-.desktop-bench > .table > * {
-  z-index: 0;
-}
-
-/* Modality on Form */
-.form > *,
-.desktop-view-tab > * {
-  z-index: 0;
 }
